--- a/rn-app/package.json
+++ b/rn-app/package.json
@@ -16,7 +16,8 @@
     "expo": "16.0.0",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz",
-    "react-native-meteor": "^1.0.3"
+    "react-native-meteor": "^1.0.3",
+    "sillyname": "^0.1.0"
   },
   "devDependencies": {
     "jest-expo": "0.4.0"
