--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-konva": "^1.1.3",
-    "react-orchestra": "^0.4.0"
+    "react-orchestra": "^0.4.0",
+    "tone": "^0.10.0"
   }
 }
